<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonPin1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/circle"
            android:clickable="false"
            android:tag="z"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonPin2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/circle"
            android:clickable="false"
            android:tag="z"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonPin3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/circle"
            android:clickable="false"
            android:tag="z"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonPin4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/circle"
            android:clickable="false"
            android:tag="z"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonPin5"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/circle"
            android:clickable="false"
            android:tag="z"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </TableRow>

    <TextView
        android:id="@+id/txtViewHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/_enter_pin"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/circle_button"
                android:tag="1"
                android:text="@string/_1"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/circle_button"
                android:tag="2"
                android:text="@string/_2"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/circle_button"
                android:tag="3"
                android:text="@string/_3"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/circle_button"
                android:tag="4"
                android:text="@string/_4"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/circle_button"
                android:tag="5"
                android:text="@string/_5"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn6"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/circle_button"
                android:tag="6"
                android:text="@string/_6"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn7"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/circle_button"
                android:tag="7"
                android:text="@string/_7"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn8"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/circle_button"
                android:tag="8"
                android:text="@string/_8"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/circle_button"
                android:tag="9"
                android:text="@string/_9"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imageButtonBck"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/circle_button_nostroke"
                android:tag="x"
                app:srcCompat="@drawable/arrow_back_45"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn0"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/circle_button"
                android:tag="0"
                android:text="@string/_0"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imageButtonOk"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/circle_button_nostroke"
                android:clickable="false"
                android:tag="z"
                app:srcCompat="@drawable/check_45"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>